--- a/index.html
+++ b/index.html
@@ -1,79 +1,39 @@
-<!DOCTYPE html>
-<html>
+---
+layout: page
+title: Reclaim My Domain - Kin Lane
+---
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Reclaim-la-hackathon : " />
+<h1>The 2nd Annual Reclaim Your Domain Hackathon</h1>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+<h2>July 19th and 20th, 2014 Pepperdine West LA Campus</h2>
 
-    <title>Reclaim-la-hackathon</title>
-  </head>
+<p>A group of committed educators and programmers will be convening in Los Angeles for a hackathon to extend and develop the ideas around "Reclaim Your Domain". http://reclaimyourdomain.org/  Specific focus will be on hacking an infrastructure for syndicating, securing and managing third-part service data, as well as working together to clearly articulate the rationale and vision for this work.</p>
 
-  <body>
+<p>These efforts build on an array of ongoing initiatives, as well as last year's hackathon at MIT: http://open.media.mit.edu/hackathon/</p>  
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/kinlane/reclaim-la-hackathon">View on GitHub</a>
+<p>The event will bring together people who have made impressive progress in these areas, though there is still a great deal of thinking, sharing, and creating to be done.</p>
 
-          <h1 id="project_title">Reclaim-la-hackathon</h1>
-          <h2 id="project_tagline"></h2>
+<p><strong>Tentative Agenda</strong></p> 
+<p>(To be elaborated by participants as the event approaches.)</p>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/kinlane/reclaim-la-hackathon/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/kinlane/reclaim-la-hackathon/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+<p><strong>Friday, July 18th:</strong></p> 
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<p>Evening reception. Location TBD, likely in Hermosa Beach</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p><strong>Saturday, July 19th:</strong></p> 
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>Pepperdine's West LA Campus</p> 
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>9:00 - 10:00 – Introductions<br />
+10:00 - 11:00 — Demonstrations of existing work<br />
+11:00 - 12:00 — Definition of goals and scope<br />
+1:00 - 2:00 — Check in, role definition, breakout groups<br />
+2:00 – 4:00 — Hackathon! <br />
+4:00 - 5:00 --  Review and Day Two agenda setting</p> 
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p><strong>Sunday, July 20th:</strong></p> 
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>Pepperdine's West LA Campus </p> 
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Reclaim-la-hackathon maintained by <a href="https://github.com/kinlane">kinlane</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
-</html>
+<p>9:00 – 12:00 Working brunch<br />
+12:00 – 5:00 Hackathon continues</p>   
