--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@ layout: page
 title: Reclaim My Domain - Kin Lane
 ---
 
-<h1>The 2nd Annual Reclaim Your Domain Hackathon</h1>
+<h2>The 2nd Annual Reclaim Your Domain Hackathon</h2>
 
-<h2>July 19th and 20th, 2014 Pepperdine West LA Campus</h2>
+<h3>July 19th and 20th, 2014 Pepperdine West LA Campus</h3>
 
 <p>A group of committed educators and programmers will be convening in Los Angeles for a hackathon to extend and develop the ideas around "Reclaim Your Domain". http://reclaimyourdomain.org/  Specific focus will be on hacking an infrastructure for syndicating, securing and managing third-part service data, as well as working together to clearly articulate the rationale and vision for this work.</p>
 
-<p>These efforts build on an array of ongoing initiatives, as well as last year's hackathon at MIT: http://open.media.mit.edu/hackathon/</p>  
+<p>These efforts build on an array of ongoing initiatives, as well as <a href="http://open.media.mit.edu/hackathon/">last year's hackathon at MIT</a>, where <a href="http://reclaimyourdomain.org/">Reclaim Your Domain</a> was conceived.</p>  
 
 <p>The event will bring together people who have made impressive progress in these areas, though there is still a great deal of thinking, sharing, and creating to be done.</p>
 
@@ -18,9 +18,11 @@ title: Reclaim My Domain - Kin Lane
 
 <p><strong>Friday, July 18th:</strong></p> 
 
-<p>Evening reception. Location TBD, likely in Hermosa Beach</p>
+<blockquote><p>Evening reception. Location TBD, likely in Hermosa Beach</p></blockquote>
 
 <p><strong>Saturday, July 19th:</strong></p> 
+
+<blockquote>
 
 <p>Pepperdine's West LA Campus</p> 
 
@@ -31,9 +33,16 @@ title: Reclaim My Domain - Kin Lane
 2:00 – 4:00 — Hackathon! <br />
 4:00 - 5:00 --  Review and Day Two agenda setting</p> 
 
+</blockquote>
+
 <p><strong>Sunday, July 20th:</strong></p> 
 
+<blockquote>
 <p>Pepperdine's West LA Campus </p> 
 
 <p>9:00 – 12:00 Working brunch<br />
-12:00 – 5:00 Hackathon continues</p>   
+12:00 – 5:00 Hackathon continues</p> 
+
+</blockquote>  
+
+<p>If you have any questions about the event, please contact <a href="mailto: jimgroom@gmail.com">Jim Groom</a> and <a href="mailto: kinlane@gmail.com">Kin Lane</a>.</p>
