--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Reclaim My Domain - Kin Lane
+title: Reclaim My Domain - LA Hackathon
 ---
 
 <h2>The 2nd Annual Reclaim Your Domain Hackathon</h2>
@@ -18,31 +18,30 @@ title: Reclaim My Domain - Kin Lane
 
 <p><strong>Friday, July 18th:</strong></p> 
 
-<blockquote><p>Evening reception. Location TBD, likely in Hermosa Beach</p></blockquote>
+<ul>
+    <li>Evening reception. Location TBD, likely in Hermosa Beach</li>
+</ul>
 
 <p><strong>Saturday, July 19th:</strong></p> 
 
-<blockquote>
+<p><a href="map.html">Pepperdine's West LA Campus</a></p> 
 
-<p>Pepperdine's West LA Campus</p> 
-
-<p>9:00 - 10:00 – Introductions<br />
-10:00 - 11:00 — Demonstrations of existing work<br />
-11:00 - 12:00 — Definition of goals and scope<br />
-1:00 - 2:00 — Check in, role definition, breakout groups<br />
-2:00 – 4:00 — Hackathon! <br />
-4:00 - 5:00 --  Review and Day Two agenda setting</p> 
-
-</blockquote>
+<ul>
+    <li>9:00 - 10:00 – Introductions</li>
+    <li>10:00 - 11:00 — Demonstrations of existing work</li>
+    <li>11:00 - 12:00 — Definition of goals and scope</li>
+    <li>1:00 - 2:00 — Check in, role definition, breakout groups</li>
+    <li>2:00 – 4:00 — Hackathon!</li>
+    <li>4:00 - 5:00 --  Review and Day Two agenda setting</li>
+</ul>
 
 <p><strong>Sunday, July 20th:</strong></p> 
 
-<blockquote>
-<p>Pepperdine's West LA Campus </p> 
+<p><a href="map.html">Pepperdine's West LA Campus</a></p> 
 
-<p>9:00 – 12:00 Working brunch<br />
-12:00 – 5:00 Hackathon continues</p> 
-
-</blockquote>  
+<ul>
+<li>9:00 – 12:00 Working brunch</li>
+<li>12:00 – 5:00 Hackathon continues</li>
+</ul> 
 
 <p>If you have any questions about the event, please contact <a href="mailto: jimgroom@gmail.com">Jim Groom</a> and <a href="mailto: kinlane@gmail.com">Kin Lane</a>.</p>
