--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Reclaim My Domain - LA Hackathon
 
 <p><strong>Friday, July 18th:</strong></p> 
 
-<ul>
+<ul class="mainlist">
     <li>Evening reception. Location TBD, likely in Hermosa Beach</li>
 </ul>
 
@@ -26,7 +26,7 @@ title: Reclaim My Domain - LA Hackathon
 
 <p><a href="map.html">Pepperdine's West LA Campus</a></p> 
 
-<ul>
+<ul class="mainlist">
     <li>9:00 - 10:00 – Introductions</li>
     <li>10:00 - 11:00 — Demonstrations of existing work</li>
     <li>11:00 - 12:00 — Definition of goals and scope</li>
@@ -39,7 +39,7 @@ title: Reclaim My Domain - LA Hackathon
 
 <p><a href="map.html">Pepperdine's West LA Campus</a></p> 
 
-<ul>
+<ul class="mainlist">
 <li>9:00 – 12:00 Working brunch</li>
 <li>12:00 – 5:00 Hackathon continues</li>
 </ul> 
