--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Reclaim My Domain - LA Hackathon
 
 <h3>July 19th and 20th, 2014 Pepperdine West LA Campus</h3>
 
-<p>A group of committed educators and programmers will be convening in Los Angeles for a hackathon to extend and develop the ideas around "Reclaim Your Domain". http://reclaimyourdomain.org/  Specific focus will be on hacking an infrastructure for syndicating, securing and managing third-part service data, as well as working together to clearly articulate the rationale and vision for this work.</p>
+<p>A group of committed educators and programmers will be convening in Los Angeles for a hackathon to extend and develop the ideas around "<a href="http://reclaimyourdomain.org/">Reclaim Your Domain</a>". Specific focus will be on hacking an infrastructure for syndicating, securing and managing third-part service data, as well as working together to clearly articulate the rationale and vision for this work.</p>
 
 <p>These efforts build on an array of ongoing initiatives, as well as <a href="http://open.media.mit.edu/hackathon/">last year's hackathon at MIT</a>, where <a href="http://reclaimyourdomain.org/">Reclaim Your Domain</a> was conceived.</p>  
 
