--- a/index.html
+++ b/index.html
@@ -45,3 +45,4 @@ title: Reclaim My Domain - LA Hackathon
 </ul> 
 
 <p>If you have any questions about the event, please contact <a href="mailto: jimgroom@gmail.com">Jim Groom</a> and <a href="mailto: kinlane@gmail.com">Kin Lane</a>.</p>
+<p>Housing for the event will be at <a href="http://www.qualityinn.com/hotel-hermosa_beach-california-CA041">Quality Inn & Suites<p> on 901 Aviation Blvd., Hermosa Beach, CA</p>
