--- a/index.html
+++ b/index.html
@@ -45,4 +45,4 @@ title: Reclaim My Domain - LA Hackathon
 </ul> 
 
 <p>If you have any questions about the event, please contact <a href="mailto: jimgroom@gmail.com">Jim Groom</a> and <a href="mailto: kinlane@gmail.com">Kin Lane</a>.</p>
-<p>Housing for the event will be at <a href="http://www.qualityinn.com/hotel-hermosa_beach-california-CA041">Quality Inn & Suites<p> on 901 Aviation Blvd., Hermosa Beach, CA</p>
+<p>Housing for the event will be at <a href="http://www.qualityinn.com/hotel-hermosa_beach-california-CA041">Quality Inn & Suites<a> - <a href="https://www.google.com/maps/preview?ie=UTF-8&fb=1&gl=us&cid=10200369834619184027&q=Quality+Inn+%26+Suites&ei=HXSoU6PqHtXfoAT_54DICw&ved=0CN0BEPwSMAo">901 Aviation Blvd., Hermosa Beach, CA</a>.</p>
